//----------------------------------------------------------------------------
// Copyright 2023, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

#ifndef CREATE_TEXTURE_H
#define CREATE_TEXTURE_H


void CreateTextureTGA(const char *const pName, const char *const pTargetName);
void CreateTexturePNG(const char *const pName, const char *const pTargetName);

#endif

// --- End of File ---
